@@ -4,6 +4,9 @@
 - Syncs Deprecated EFI 1.x Protocols
   * Misc random deprecated protocols aligned with UEFI 2.x specs
   * Some are related to filesystem drivers; for which updated versions are created accordingly
+- Improves `AcquireGOP` Feature
+  * Now handles uncompressed OptionROMs
+  * None encountered to date but theoretically possible
 
 
 0.13.3.AD (07 Mar 23):
